# TeslaSCItoolkit

./: .gitignore  CHANGELOG.md  LICENSE-MIT  README.md  pyproject.toml
.exporter/: config-adult.yml  config-fuzzy.yml  config-join.yml  config.yml  exported-adult.csv  exported-join.csv  simple-join.csv
.github/workflows/: demo.yml
.tesci/: simple.csv
.tesci/comparisons/: compare.py
examples/: 01-config-join.yml  02-config-adult.yml  03-config-multiple-aggregations.yml  04-config-similarity.yml  05-config-release.yml  06-download.yml  07-config-multi-stage-similarity-join.yml  submission-form.xml
examples/bibliometric-study/: config.yml
examples/simple/: redact.json
exporter/: fuzzy.py  mirrors.py  release.py  similarity.py  suggestions.py  transformations.py  types.py
exporter/scripts/: context.py  exporter.py
exporter/scripts/aggregate/: __init__.py
exporter/scripts/apply/: __init__.py
exporter/scripts/fuzzy/: __init__.py
exporter/scripts/include/: __init__.py
exporter/scripts/join/: __init__.py
exporter/scripts/preview/: __init__.py
exporter/scripts/publish/: __init__.py
exporter/scripts/release/: __init__.py
exporter/scripts/similarity/: __init__.py
exporter/scripts/start/: __init__.py
exporter/scripts/suggest/: __init__.py
tesci/: release.py  similarity.py  transformations.py  types.py
tesci/api/: api.py
tesci/api/providers/: __init__.py  openalex.py
tesci/scripts/: context.py  tesci.py
tesci/scripts/aggregate/: __init__.py
tesci/scripts/apply/: __init__.py
tesci/scripts/download/: __init__.py
tesci/scripts/include/: __init__.py
tesci/scripts/preview/: __init__.py
tesci/scripts/release/: __init__.py
tesci/scripts/similarity/: __init__.py
tesci/scripts/start/: __init__.py
